# otus-homework.08

./: CMakeLists.txt  README.md
.github/: release.yml
.github/workflows/: release.yml
include/: block_cache.h  comparator.h  comparer.h  config.h  duplicate_finder.h  file_reader.h  filter.h  hasher.h  parser.h  path_hash.h  scanner.h  utilities.h
src/: CMakeLists.txt  block_cache.cpp  comparator.cpp  comparer.cpp  duplicate_finder.cpp  file_reader.cpp  filter.cpp  hasher.cpp  main.cpp  parser.cpp  scanner.cpp  utilities.cpp
tests/: CMakeLists.txt  test_block_cache.cpp  test_comparator.cpp  test_duplicate_finder.cpp  test_filter.cpp  test_hasher.cpp  test_integration.cpp  test_parser.cpp  test_scanner.cpp
